--- a/index.html
+++ b/index.html
@@ -3,41 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
     <div class="wrapper">
-        <h1>Password Generator</h1>
+        <h1 class="title">Password Generator</h1>
         <div class="display-container">
-            <p class="js-display"></p>
-            <span class="image"><i class="fa-regular fa-clipboard"></i></span>
+            <p id="result"></p>
+            <span class="image" id="clipboard"><i class="fa-regular fa-clipboard"></i></span>
         </div>
         <div class="options">
             <div class="length option">
                 <label for="length">Password length</label>
-                <input type="text">
+                <input type="number" value="20" id="length">
             </div>
             <div class="uppercase option">
                 <label for="uppercase">Include uppercase letters</label>
-                <input type="checkbox">
+                <input type="checkbox" id="uppercase">
             </div>
             <div class="lowercase option">
                 <label for="lowercase">Include lowercase letters</label>
-                <input type="checkbox">
+                <input type="checkbox" id="lowercase">
             </div>
             <div class="numbers option">
                 <label for="numbers">Include numbers</label>
-                <input type="checkbox">
+                <input type="checkbox" id="numbers">
             </div>
             <div class="symbols option">
                 <label for="symbols">Include symbols</label>
-                <input type="checkbox">
+                <input type="checkbox" id="symbols">
             </div>
         </div>
-        <button class="generate-password">Generate Password</button>
+        <button class="generate-password" id="generate">Generate Password</button>
     </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
