Progress bar added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <p id="result"></p>
             <span class="image" id="clipboard"><i class="fa-regular fa-clipboard"></i></span>
         </div>
+        <div class="pass-indicator"><span class="progressBar"></span></div>
         <div class="options">
             <div class="length option">
                 <label for="length">Password length</label>
